crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_action_log_continue.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "FaultAction::LogAndContinue"
---
LogAndContinue
