crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_detection_state_with_faults.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: state
---
FaultDetectionState {
    consecutive_count: 2,
    last_occurrence: Some(
        200ms,
    ),
    window_start: None,
    window_count: 0,
    quarantined: false,
    quarantine_until: None,
}
